libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/is-3.jsonc
//@ run: fail
//@ description: is/3 should error out
[
  "::kernel::special_form::is",
  { "#literal": true },
  { "#literal": true },
  { "#literal": true }
  //~^ ERROR Remove this argument
]
